# munyorunyoru

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  data_sample.md  expanded.txt  lang_spec.txt  line-col-rs_license.txt  motivation.md  readme.md  sample.munyo  sample_output.txt  sample_print.txt  whats_dsl.md
munyo-sample/: Cargo.toml  readme.md
munyo-sample/src/: error.rs  lib.rs  sample_obj.rs
munyo-sample/src/samples/: color.rs  custom_new_sample.rs  mod.rs
munyo-sample/src/samples/html_samples/: html_builder.rs  mod.rs
munyo-sample/src/samples/html_samples/sample1/: output.html  sample1_test.rs  tags.rs
munyo-sample/src/samples/html_samples/sample2/: mod.rs  sample2.munyo  sample2_test.rs  tags.rs
munyo-sample/src/samples/html_samples/sample3/: mod.rs  sample3_test.rs  tags.rs
munyo-sample/src/samples/html_samples/sample4/: mod.rs  sample.css  text.txt  untyped.rs  untyped_test.rs
munyo-sample/src/samples/poke_move_sample/: ailment_change.rs  basic_move.rs  basic_move_chunk_syntax.rs  basic_move_syntax.rs  basic_move_t.munyo  custom_parser.rs  custom_parsers.rs  data_types.rs  mod.rs  move_property.rs  poke_move.rs  poke_type.rs  stat_ailment.rs  stat_type.rs  status_change.rs  test_poke_move_sample.rs
munyo-sample/src/samples/poke_sample/: poke_comp1.rs  poke_comp2.rs  poke_comp3.rs  poke_values.rs
munyo_derive/: Cargo.toml  expanded.txt
munyo_derive/src/: lib.rs  sample1.rs
munyo_derive_test/: Cargo.toml
munyo_derive_test/src/: derive_test.rs  enu.rs  main.rs  self_serialize.rs
src/: Iinner_lang.pest  error.rs  inner_lang.pest  lib.rs  munyo_grammar.pest  proble.pest  pub_apis.rs  test_parser.rs
src/builder/: builder.rs  default_builder.rs  html_builder.rs  mod.rs
src/converters/: converter.rs  mod.rs
src/error/: deserialize_error.rs  line_col_lookup.rs  mod.rs  munyo_error.rs  parse_error.rs  parse_error2.rs  parse_fail.rs  read_file_error.rs  serde_inner_error.rs
src/file_io/: concurrent.rs  data.rs  mod.rs  read_files.rs  receiver.rs  recv_error.rs
src/lang/: builder_tree.rs  from_str_with_metabuilder.rs  item_tree.rs  line_peeker.rs  line_type.rs  main_line_item.rs  make_escaped_string.rs  mod.rs  munyo_parser.rs  parse_content.rs  parse_line_contents.rs  parse_line_continuation.rs  parse_line_end.rs  parse_main_line.rs  process_file_text.rs  processed.rs  (+2 more)
(+64 files in other folders)
