[package]
name = "munyo"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
shrink_pool = "1"
async-channel = "1"
thiserror = "1"
num_cpus = "1"
pest = "2"
pest_derive = "2"

serde = { version = "1", features = ["derive"] }

[workspace]
members = ["munyo_derive"]
