[package]
name = "munyo"
version = "0.3.2"
edition = "2021"
authors = ["juzy <dochy.ksti@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A data language which aims to be the most efficient way to handwrite data."
repository = "https://github.com/dochy-ksti/munyorunyoru"
readme = "readme.md"
keywords = ["DSL", "HTML", "async", "ML"]
categories = ["parser-implementations"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
shrink_pool = "1"
async-channel = "1"
thiserror = "1"
pest = "2"
pest_derive = "2"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[workspace]
members = []

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
