[package]
name = "munyo-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
pest = "2"
pest_derive = "2"
munyo = "*"
strum = { version = "0.26", features = ["derive"] }
bitflags = "2"
anyhow = { version = "1", features = ["backtrace"] }
