[package]
name = "munyo_derive_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
munyo = { path = "../" }
munyo_derive = { path = "../munyo_derive" }
serde = { version = "1", features = ["derive"] }
